tests/language_modules/04_types/invalid_semantics/unknown_return_type.vf
module UnknownReturnType

function missing() returns MissingType
is
    return 0
end missing

end UnknownReturnType